--- a/index.html
+++ b/index.html
@@ -1,99 +1,178 @@
-* YOU BOOT UP...  
-* the terminal’s cold. darker than usual.
+┌─────────────────────────────────────────────┐
+│                 N O  C L U E                 │
+│             L O R E  S A G A                 │
+│                 C H A P T E R  1             │
+└─────────────────────────────────────────────┘
 
-        ██████╗░░█████╗░░█████╗░██╗░░██╗
-        ██╔══██╗██╔══██╗██╔══██╗██║░░██║
-        ██████╔╝██║░░██║██║░░██║███████║
-        ██╔═══╝░██║░░██║██║░░██║██╔══██║
-        ██║░░░░░╚█████╔╝╚█████╔╝██║░░██║
-        ╚═╝░░░░░░╚════╝░░╚════╝░╚═╝░░╚═╝
+mr meo was born without arms —  
+not by fate, but by the cruel accident of code.  
+at school, whispers followed him like shadows,  
+taunts and jeers carved from the fear of difference.  
 
-          >> H E C K M E S T E R  9 9 <<
-             a nano curl adventure
+his empty sleeves danced in the cold breeze,  
+hands made not by flesh, but by a thirteen-year-old dog  
+who spent nights crafting them from pixels and hope.
 
-* you: "...where the heck am i?"
-
-A bug creeps out of the code...
-               _
-             _( )_
-            /     \
-           |  °  ° |   <-- the bug
-           \__^__/  
-
-it screeches: “LINE 666: UNDEFINED SOUL”
+though broken, mr meo’s spirit burned fierce,  
+a quiet storm brewing beneath a calm surface.  
+he vowed to prove that strength lies not in flesh,  
+but in heart and mind — in the will to rise.
 
 ---
 
-what will you do?
+┌─────────────────────────────────────────────┐
+│                 C H A P T E R  2             │
+└─────────────────────────────────────────────┘
 
-[1] try to FIGHT it
-[2] show MERCY
-[3] unplug your PC
-[4] curl deeper...
+beyond the school’s gray walls, two islands stood apart:  
 
-you try to FIGHT...
+cat island, where kitten ruled her little store,  
+selling sweets and dreams to the wide-eyed,  
+a six-year-old with a kingdom of candy and secrets.  
 
-* you SLAP the bug with raw keyboard energy.
+dog island, wild and restless,  
+home to brodda and broski, brothers divided by blame  
+and broken things —  
+brodda the reckless, quick to anger,  
+broski the quiet, often blamed, often grounded.
 
-bug: “!!SEGMENTATION FAULT!!”
+the islands’ worlds couldn’t be more different —  
+one vibrant, full of noise and color,  
+the other shadowed, tangled in wild forests and old grudges.  
 
-...but it’s not enough.
-
-the terminal shakes. reality glitches.
-
-...
-
-...
-
-        ░░░░░░░░░░░░░░░░░░░░
-       ░ ERROR: 0xDEADBEEF ░
-        ░░░░░░░░░░░░░░░░░░░░
-
-a new entity appears.
-
-       ______________
-      |   HELLO :)   |
-      |______________|
-           \ (°-°) /   <-- corrupted clippy
-            \___/
-
-“looks like you’re trying to fight fate.”
-
-clippy begins typing **for you**.
+but the great divide hid a secret,  
+one that might bridge their worlds — or tear them apart.
 
 ---
 
-* your options are gone.
+┌─────────────────────────────────────────────┐
+│                 C H A P T E R  3             │
+└─────────────────────────────────────────────┘
 
-* you feel your soul being compressed...
+kitten dreamed of more than candy and coins —  
+he wanted the spotlight, the center of attention,  
+to shine brighter than any neon sign on cat island’s busy streets.  
 
-...
+hiw xbox, the treasure of his small world,  
+was stolen, leaving him lost in a storm of emo silence.  
 
-...
+yet even in loss, kitten found strength —  
+the courage to keep running his store,  
+to smile through the tears,  
+and to fight for his place in the sun.
 
-...
+---
 
-but then you do the unthinkable.
+┌─────────────────────────────────────────────┐
+│                 C H A P T E R  4             │
+└─────────────────────────────────────────────┘
 
-> sudo rm -rf /bug
+brodda and broski’s feud reached a breaking point,  
 
-the bug SCREECHES.
+brodda broke something important,  
+blamed broski without hesitation,  
+and broski bore the weight — grounded,  
+his world shrinking under the shadow of blame.
 
-the lights go out.
+but beneath anger and punishment,  
+a fragile bond remained —  
+the brothers, bound by blood and hurt,  
+were searching for a way back.
 
-your PC fan slows.
+---
 
-...
+┌─────────────────────────────────────────────┐
+│                 C H A P T E R  5             │
+└─────────────────────────────────────────────┘
 
-...
+santa, the jolly glitch in no clue’s code,  
 
-YOU WIN.
+gorged himself on cookies and milk,  
+his steps slow, his breath heavy —  
+but his wings still carried him beyond the islands,  
+across the skies where dreams and realities blurred.
 
-...
+his laughter echoed through the glitchy clouds,  
+a reminder that even in a fractured world,  
+joy could still fly.
 
-          THANKS FOR PLAYING
-        H E C K M E S T E R  9 9
+---
 
-   made by nano, powered by curl ☠️
+┌─────────────────────────────────────────────┐
+│                 C H A P T E R  6             │
+└─────────────────────────────────────────────┘
 
-curl again... if you dare.
+mr meo discovered the hands made for him —  
+
+crafted late one night by the thirteen-year-old dog,  
+alone in his room of flickering screens and silent hopes.  
+
+these hands weren’t flesh, but code and love,  
+a symbol that family isn’t just blood,  
+but those who build you up in the dark.
+
+---
+
+┌─────────────────────────────────────────────┐
+│                 C H A P T E R  7             │
+└─────────────────────────────────────────────┘
+
+the great divide between cat and dog islands —  
+
+was more than water and wild forest,  
+it was a chasm of misunderstanding, fear, and old grudges.  
+
+each side told stories painting the other as foe,  
+but some whispered of peace,  
+of a bridge built from trust and courage.
+
+---
+
+┌─────────────────────────────────────────────┐
+│                 C H A P T E R  8             │
+└─────────────────────────────────────────────┘
+
+kitten found a hidden map in his stolen xbox —  
+
+a map to the legendary bugatti,  
+a shimmering beast worth six billion catcoins,  
+said to grant the owner the power to change no clue’s fate.
+
+the spotlight he craved suddenly had a path —  
+but chasing it meant crossing the great divide,  
+and risking everything.
+
+---
+
+┌─────────────────────────────────────────────┐
+│                 C H A P T E R  9             │
+└─────────────────────────────────────────────┘
+  
+brodda and broski faced their past —  
+
+in the shadows of dog island’s wilds,  
+they found truth beneath blame,  
+and a chance to mend what broke.
+
+their bond, once shattered, grew stronger,  
+a beacon for all who sought to bridge worlds.
+
+---
+
+┌─────────────────────────────────────────────┐
+│                C H A P T E R  10            │
+└─────────────────────────────────────────────┘
+
+mr meo, kitten, brodda, broski, and santa —  
+
+together, they stood at the edge of the great divide,  
+ready to build a bridge of hope and dreams.  
+
+no clue’s world was fractured,  
+but within that fracture, a new story was born —  
+one of courage, family, and the fight to find your place.
+
+and the bugatti gleamed in the distance,  
+a promise of adventure and change.
+
+press enter to continue...  
