--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ but in heart and mind — in the will to rise.
 
 beyond the school’s gray walls, two islands stood apart:  
 
-cat island, where kitten ruled her little store,  
+cat island, where kitty ruled her little store,  
 selling sweets and dreams to the wide-eyed,  
 a six-year-old with a kingdom of candy and secrets.  
 
